webservice mockup tests, almost have jobsub_q tests working

--- a/test/README
+++ b/test/README
@@ -1,9 +1,7 @@
-You can run these tests one by one:
-python test_dashboard.py
-.
-.
-.
-or run the whole suite:
-./run_tests.py
 
-In either case the poms environment will be stood up and torn down for you based on your poms.ini configuration.
+We will be running tests under "pytest"
+http://doc.pytest.org/en/latest/contents.html
+
+I'm enabling all the test discovery possible, including
+doctests.
+
